# DirectXShaderCompiler

./: conversation_log.md  fix_callers.py  semantics_preserving_fuzzing.md
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/dxc-fuzzer/: .gitignore  AST_INTEGRATION_SUMMARY.md  CLEANUP_NOTES.md  CMakeLists.txt  COMPLETE_AST_IMPLEMENTATION.md  CONTEXT_AWARE_MUTATIONS_IMPLEMENTATION.md  CONTROL_FLOW_FIXES.md  CooperativeScheduling_Design.md  DynamicBlockDesign.md  FUZZER_README.md  FUZZER_STATUS.md  FUZZER_SUMMARY.md  FUZZING_STRATEGY.md  FuzzerDebug.h  HLSLFuzzer.cpp  HLSLMutationTracker.cpp  HLSLMutationTracker.h  HLSLParticipantPatterns.cpp  HLSLParticipantPatterns.h  HLSLProgramGenerator.cpp  HLSLProgramGenerator.h  HLSLProgramGeneratorUtils.cpp  HLSLSemanticMutator.cpp  HLSLSemanticMutator.h  HLSL_FUZZER_DESIGN.md  HLSL_FUZZER_IMPLEMENTATION_SPEC.md  HOW_TO_PRINT_PROGRAMS.md  HOW_TO_TEST.md  INTERPRETER_MISSING_FEATURES.md  IncrementalFuzzingPipeline.cpp  IncrementalFuzzingPipeline.h  LOOP_CONTEXT_DETECTION.md  MINIHLSL_FUZZER_DESIGN.md  MiniHLSL.md  MiniHLSLFuzzer.cpp  MiniHLSLInterpreter.cpp  MiniHLSLInterpreter.h  MiniHLSLInterpreterFuzzer.cpp  MiniHLSLInterpreterFuzzer.h  MiniHLSLInterpreterFuzzerMutations.cpp  (+45 more)
tools/clang/tools/dxc-fuzzer/corpus/: control_flow_continue.hlsl  control_flow_for_if.hlsl  control_flow_if_for.hlsl  control_flow_if_return.hlsl  control_flow_loop.hlsl  control_flow_nest_for.hlsl  control_flow_nest_switch.hlsl  control_flow_switch.hlsl  control_flow_switch_loop.hlsl  control_flow_switch_ndefault.hlsl  control_flow_while.hlsl  control_flow_while_break.hlsl  if_stmt.hlsl  mem_conv_device.hlsl  mem_conv_group.hlsl  wave_active.hlsl  wave_ballot.hlsl  wave_basic.hlsl  wave_lanes.hlsl  wave_prefix.hlsl  wave_reduce.hlsl  wave_rw.hlsl
tools/clang/tools/dxc-fuzzer/examples/: assignexpr.hlsl  barrier_deadlock_test.hlsl  barrier_test.hlsl  compositional.hlsl  control_flow_break.hlsl  control_flow_break_simple.hlsl  control_flow_continue.hlsl  control_flow_cp_if_loop.hlsl  control_flow_do_while.hlsl  control_flow_for_if.hlsl  control_flow_if.hlsl  control_flow_if_for.hlsl  control_flow_if_loop.hlsl  control_flow_if_return.hlsl  control_flow_if_wave.hlsl  control_flow_loop.hlsl  control_flow_nest_for.hlsl  control_flow_nest_switch.hlsl  control_flow_non_uni_loop.hlsl  control_flow_switch.hlsl  control_flow_switch_break.hlsl  control_flow_switch_loop.hlsl  control_flow_switch_ndefault.hlsl  control_flow_switch_return.hlsl  control_flow_test.hlsl  control_flow_while.hlsl  control_flow_while_break.hlsl  control_flow_while_continue.hlsl  regular_block_inside_loop.hlsl  shared_memory_test.hlsl  simple_wave_sum.hlsl  switch_for_break.hlsl  test_simple_loop.hlsl  valid_switch_break.hlsl
tools/clang/tools/dxc-fuzzer/proof/: DETAILED_PROOF_ANALYSIS.md  LOOP_SUPPORT_PLAN.md  MiniHLSL_Formal_Specification.md  OrderIndependenceProof.lean  OrderIndependenceProof_Documentation.md  PROOF_METHODOLOGY.md  PROOF_SUMMARY.md  SORRY_ANALYSIS.md  conversation_log.md  conversation_log_final.md  detailed_proof_walkthrough.md  lake-manifest.json  lakefile.toml
tools/clang/tools/dxc-fuzzer/seeds/: loop_divergence.hlsl  nested_control_flow.hlsl  simple_divergence.hlsl
tools/clang/tools/dxc-fuzzer/test_cases/: invalid_ballot_operations.hlsl  invalid_barriers_sync.hlsl  invalid_dbeg_cross_path.hlsl  invalid_divergent_switch.hlsl  invalid_divergent_wave_ops.hlsl  invalid_forbidden_constructs.hlsl  invalid_lane_dependent_reads.hlsl  invalid_memory_racing.hlsl  invalid_minihlsl.hlsl  invalid_multiprefix_ops.hlsl  invalid_nondeterministic_ops.hlsl  invalid_nonuniform_loop.hlsl  invalid_order_dependent_wave_ops.hlsl  invalid_wave_dependent_loop.hlsl  valid_associative_operations.hlsl  valid_basic_wave_ops.hlsl  valid_complex_arithmetic.hlsl  valid_dbeg_early_return.hlsl  valid_dbeg_interleaved.hlsl  valid_dbeg_loop_disjoint.hlsl  valid_dbeg_nested_returns.hlsl  valid_dbeg_tests.hlsl  valid_deterministic_expressions.hlsl  valid_minihlsl.hlsl  valid_shared_memory.hlsl  valid_uniform_branching.hlsl
tools/clang/tools/dxc-fuzzer/test_cases_2/: valid_dbeg_simple_if_else.hlsl  valid_shared_memory.hlsl
tools/clang/tools/dxc-fuzzer/test_outputs/: control_flow_break.txt  control_flow_continue.txt  control_flow_do_while.txt  control_flow_for_if.txt  control_flow_if_for.txt  control_flow_if_return.txt  control_flow_loop.txt  control_flow_nest_for.txt  control_flow_nest_switch.txt  control_flow_switch.txt  control_flow_switch_break.txt  control_flow_switch_loop.txt  control_flow_switch_ndefault.txt  control_flow_switch_return.txt  control_flow_while.txt  control_flow_while_break.txt  control_flow_while_continue.txt
